# movie-detectives-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  googlecloud_gemini_example.json  movie.json  pyproject.toml
api/: common.py  config.py  main.py  prompt.py  tmdb.py
api/models/: azure.py  gemini.py  llama3Groq.py  llama3Ollama.py  qwen.py
api/templates/: chatgpt.jinja  metadata_cn.jinja  prompt_answer.jinja  prompt_answer_cn.jinja  prompt_question.jinja  prompt_question_cn.jinja
api/templates/language/: cn.jinja
api/templates/personality/: christmas_cn.jinja  dad_cn.jinja  default_cn.jinja  scientist_cn.jinja
tests/: test_azure.py  test_gemini.py  test_ollama.py  test_prompt.py
